# finance_sandbox

./: README.md  pyproject.toml
notebooks/: stock_price_analysis.ipynb
